--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <title>Hi mom</title>
   </head>
   <body>
-    <h1>Hi mom!</h1>
-    <script></script>
+    <div id="renderer"></div>
   </body>
 </html>
