Added Some electron dev and test packages

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Hi mom</title>
+    <title>Hastings Pier</title>
   </head>
   <body>
+      <script>document.write(process.versions.node)</script>
     <div id="renderer"></div>
   </body>
 </html>
