--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Hastings Pier</title>
   </head>
-  <body>
+  <body style="margin: 0px;">
     <div style="display: none;">
       Electron version:<script>document.write(process.versions.electron)</script><br/>
       Node version:<script>document.write(process.versions.node)</script><br/>
