Added Glyph icons to menu bar from bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hastings Pier</title>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body style="margin: 0px;">
     <div style="display: none;">
-      Electron version:<script>document.write(process.versions.electron)</script><br/>
-      Node version:<script>document.write(process.versions.node)</script><br/>
-      Chrome version:<script>document.write(process.versions.chrome)</script><br/>
+      Electron version:<script>
+        document.write(process.versions.electron);</script
+      ><br />
+      Node version:<script>
+        document.write(process.versions.node);</script
+      ><br />
+      Chrome version:<script>
+        document.write(process.versions.chrome);</script
+      ><br />
     </div>
     <div id="renderer"></div>
   </body>
